--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body{
 
 .introduction p
 {
-    font-family: cursive;
+  font-family: 'Oswald', sans-serif;
     font-size: 18px;
 }
 .intro-para p{
